--- a/public/theme.css
+++ b/public/theme.css
@@ -1,3 +1,8 @@
+   #container {
+    display: flex;
+    flex-wrap:wrap;
+  }
+ 
  /* creating the grid for our project */
   .container {     
     width: 100vw;
@@ -59,6 +64,8 @@
         transform: scale(1.1);
     
       }
+
+
     
   }
 
@@ -75,6 +82,13 @@
         p {
             margin-top: 100px;
         }
+
+        input {
+          width: 100%;
+          box-sizing: border-box;
+          overflow-wrap: break-word;
+        }
     }
   }
+
 
